--- a/views/customer/contactUs.ejs
+++ b/views/customer/contactUs.ejs
@@ -17,7 +17,7 @@
   
               <li>
                 <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:rupayan.nandi2022@uem.edu.in"><b> rupayan.nandi2022@uem.edu.in</b></a>
+                <a href="mailto:rupayan.nandi2022@uem.edu.in"><b> subhadipsinha12@gmail.com</b></a>
               </li>
             </ul>
   
